# project1-roman-evan

./: AddAssignmentFrame.cpp  AddAssignmentFrame.h  AdminFrame.cpp  AdminFrame.h  Assignment.cpp  Assignment.h  CMakeLists.txt  InstructorFrame.cpp  InstructorFrame.h  LoginFrame.cpp  LoginFrame.h  Potential Stories.md  Resource.h  StudentFrame.cpp  StudentFrame.h  Submission.cpp  Submission.h  SubmitFrame.h  User.cpp  User.h  Util.h  assignment-schema.json  assignment-schema2.json  main.cpp  packages.config  project-test.aps  project-test.rc  project-test.vcxproj  project-test.vcxproj.filters  project1-roman-evan.rc  project1-roman-evan.sln  test.cpp  users-schema.json  vcpkg.json
Frames/: AddAssignmentFrame.cpp  AddAssignmentFrame.h  AdminFrame.cpp  AdminFrame.h  InstructorFrame.cpp  InstructorFrame.h  LoginFrame.cpp  LoginFrame.h  StudentFrame.cpp  StudentFrame.h  SubmitFrame.h
Header Files/: AddAssignmentFrame.h  Assignment.h  InstructorFrame.h  LoginFrame.h  StudentFrame.h  Submission.h  SubmitFrame.h  TestExecutable.h  User.h
Models/: Assignment.cpp  Assignment.h  Submission.cpp  Submission.h  TestExecutable.cpp  User.cpp
Source Files/: AddAssignmentFrame.cpp  AdminFrame.cpp  Assignment.cpp  InstructorFrame.cpp  LoginFrame.cpp  StudentFrame.cpp  Submission.cpp  main.cpp
TestPrograms/: SquaredNumbers.cpp
Util/: Util.h
inputs/check-1/: squaredNumbersInput_2.txt
json-scemas/: assignment-schema.json  submissions-schema.json
jsonSchemas/: assignment-schema.json  submissions-schema.json  users-schema.json
outputs/check-1/: squaredNumbersOutput_2.txt
